--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@google/generative-ai": "^0.21.0",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.6",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.8.0",
     "maath": "^0.10.8",
